# brick_oven

./: Cargo.toml  Dioxus.toml  brick_oven.db
assets/: main.css
src/: main.rs
src/components/: mod.rs  order.rs  order_screen.rs  pizza.rs  prep.rs  server.rs
