[package]
name = "brick_oven"
version = "0.1.0"
authors = ["Gonroz <wasabaininja@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
rusqlite = "0.38.0"
serde = "1.0.228"
serde_json = "1.0.149"

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
